2004-12-10  Andras Varga

	* default background color changed from #c0c0c0 to #d0d0d0 

2004-11-29  Andras Varga

	* ebnf.y: malloc.h changed to stdlib.h. Change needed for Mac OS/X 
	[patch from Michael Tuexen]

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-11-02  Andras Varga

	* drawopts.tcl: updated icon selection support for categorized icons 

2004-10-20  Andras Varga

	* support for categorized icons (see Tkenv ChangeLog from same date)

2004-10-15  Andras Varga

	* fileview.tcl: fix: "View/Edit file" option didn't like some file names

2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-08  Andras Varga

        * widgets.tcl: updated Tcl/Tk version check

2004-08-16  Andras Varga

        * dispstr.tcl: fix: generate only either "i=" or "b=" tag in display
        strings (TBD gned doesn't support using "i=" and "b=" together)

2004-07-27  Andras Varga

        * ebnf.lex: fixed "`yytext_ptr' undeclared" error with some flex 
        versions

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

2004-03-23  Andras Varga
        
        * menuproc.tcl: bugfix: in the treeview, right click + Save always
        saved the file of the currently open canvas, not the right-clicked one.
        [reported by V.T.Nguyen]

2004-03-22  ------ omnetpp-3.0a3 released ------

2004-03-03  ------ omnetpp-3.0a2 released ------

2004-02-22  Andras Varga

        * ebnf.lex,ebnf.y,makened.tcl,datadict.tcl: support for new "gate++"
        NED construct (temporary, until gned gets ported to nedxml)

2004-02-11  Andras Varga

        * fixed bug that caused Tk error when a display string contains
        a paremeter reference, e.g. "o=$color"

        * implemented File|Export EPS... function

2004-02-04  ------ omnetpp-3.0pre1 released ------
